<resources>
    <string name="app_name">TT_des_v_1.0.0</string>

    <string name="pref_default_base_url">http://192.168.100.6/servicesTT/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">contentDescription</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="prompt_user">Usuario:</string>
    <string name="prompt_password">Usuario:</string>
    <string name="sign_in">ENTRAR</string>
    <string name="pre_registrarse">Registrarse</string>
    <string name="version_title">Versión:</string>
    <string name="version">dr_v1.0.0</string>
    <string name="cancelar">Cancelar</string>
    <string name="activar">Activar</string>


    <string name="nombre_contacto">Nombre contacto: </string>

    <string name="telefono">Telefono: </string>

    <!-- View Registrarse -->
    <string name="registro">Registro</string>
    <string name="nombre_user">Nombre de usuario</string>
    <string name="correo">Correo electronico</string>
    <string name="phone_user">Número telefonico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar">Confirmación</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_maps">Map</string>

    <string name="description">Description</string>
    <string name="color_actual">Color Actual</string>

</resources>
