<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Ui.Activity.ActRegistro">

    <RelativeLayout
        android:id="@+id/viewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/headerBackground"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/llHeadPers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/titlePre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registro"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewTitle"
        android:layout_above="@+id/btnGuardar"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:visibility="visible"
        tools:ignore="UselessParent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/llNomUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:visibility="visible"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:tint="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputNomUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:errorTextAppearance="@style/error">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editNomUser"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/nombre_user"
                        android:inputType="textCapCharacters"
                        android:padding="7dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llNomUser"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:tint="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputCorreo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:errorTextAppearance="@style/error">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/correo"
                        android:inputType="textCapCharacters"
                        android:padding="7dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llNumTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llCorreo"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:tint="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputNumTel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:errorTextAppearance="@style/error">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editNumTel"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/phone_user"
                        android:inputType="number"
                        android:padding="7dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llNumTel"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:tint="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:passwordToggleEnabled="true"
                    app:errorTextAppearance="@style/error">


                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/contrasena"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:textSize="16sp" />
                    
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llPassword"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:tint="@color/colorAccent"
                     />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputConfirmar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:passwordToggleEnabled="true"
                    app:errorTextAppearance="@style/error">

                    <EditText
                        android:id="@+id/editTextConfirmar"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/confirmar"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relCodigo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewTitle"
        android:layout_above="@+id/btnGuardar"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@color/white"
        android:visibility="gone"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/viewCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/headerCodigo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/llCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/titleCodigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Para finalizar su registro busque en el buzon de su correo joaquinma1992@gmail.com un mensaje enviado desde la direccion algo@gmail.com que contiene el codigo de confirmacion."
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewCodigo"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription"
                android:tint="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputCodigo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:errorTextAppearance="@style/error">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Codigo"
                    android:inputType="textCapCharacters"
                    android:padding="7dp"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_enter"
        android:text="@string/guardar"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:visibility="visible" />

    <!-- ImageView : app:srcCompat="@drawable/ic_street" -->

</RelativeLayout>